Modify gradle settings
To avoid "WARNING: A Java agent has been loaded dynamically"