@@ -39,5 +39,9 @@ dependencies {
 }
 
 tasks.named('test') {
+//	to avoid "WARNING: A Java agent has been loaded dynamically"
+	jvmArgs = [
+			'-XX:+EnableDynamicAgentLoading',
+	]
 	useJUnitPlatform()
 }
